--- a/data-architect.html
+++ b/data-architect.html
@@ -81,7 +81,7 @@
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/data-architect-24139-va-dlOV8W-8ar6B_yaKiznY58'>Data Architect-24139-VA #0688 job at Radiant Digital in Ashburn, VA, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/data-architect-24139-va-dlOV8W-8ar6B_yaKiznY58'>Data Architect-24139-VA #0688 job at Radiant Digital in Ashburn, VA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -97,7 +97,7 @@
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://rbauction.referrals.selectminds.com/jobs/data-architect-2858'>Data Architect - Ritchie Bros. Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rbauction.referrals.selectminds.com/jobs/data-architect-2858'>Data Architect - Ritchie Bros. Careers</a></h5> 
 <p><span class="badge badge-light">Burnaby Burnaby Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -157,7 +157,7 @@
 work closely with your customer to understand their questions and needs, and 
 dig?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/solstice/jobs/4277354002?gh_jid=4277354002&gh_src=b5349ccb2'>Job Application for Data Architect at Solstice | Kin + Carta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/solstice/jobs/4277354002?gh_jid=4277354002&gh_src=b5349ccb2'>Job Application for Data Architect at Solstice | Kin + Carta</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -213,7 +213,7 @@ dig?...</p>
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/InfoplusTechnologies1/743999698067033--immediate-need-for-data-architect-'>Infoplus Technologies "Immediate Need for Data Architect" | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/InfoplusTechnologies1/743999698067033--immediate-need-for-data-architect-'>Infoplus Technologies "Immediate Need for Data Architect" | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -229,7 +229,7 @@ dig?...</p>
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bjss/jobs/1556003'>Job Application for Data Architect at BJSS</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bjss/jobs/1556003'>Job Application for Data Architect at BJSS</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -332,7 +332,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">New York, NY 10014, USA</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/xorsecurity/jobs/4416285002?gh_src=2b1427962'>Job Application for Data Architect IV at XOR Security</a></h5> 
+<h5><a href='https://boards.greenhouse.io/xorsecurity/jobs/4416285002?gh_src=2b1427962'>Job Application for Data Architect IV at XOR Security</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
@@ -422,7 +422,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/data-technical-architect-23803-fl-bxV7Mq7ZCr6BDjaKjNoogA'>Data/Technical Architect-23803-FL #0634 job at Radiant Digital in Temple Terrace, FL, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/data-technical-architect-23803-fl-bxV7Mq7ZCr6BDjaKjNoogA'>Data/Technical Architect-23803-FL #0634 job at Radiant Digital in Temple Terrace, FL, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Temple Terrace, FLTemple Terrace, FL</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -458,7 +458,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">Mountain View, California</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/MonsterWorldwide1/743999697051478-data-architect'>Monster Worldwide Data Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MonsterWorldwide1/743999697051478-data-architect'>Monster Worldwide Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -474,7 +474,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Oct 4, 2019 ... Apply online for the job of Big Data Architect at Tiger Analytics.</p>
 <hr/>
-<h5><a href='https://serviceplan.softgarden.io/job/4522369/Data-Engineer-Data-Architect-m-w-x-?jobDbPVId=12458529&amp;l=en'>Data Engineer / Data Architect (m/w/x)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://serviceplan.softgarden.io/job/4522369/Data-Engineer-Data-Architect-m-w-x-?jobDbPVId=12458529&amp;l=en'>Data Engineer / Data Architect (m/w/x)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
